--- a/src/module/detail/detail.html
+++ b/src/module/detail/detail.html
@@ -63,6 +63,7 @@
               <td class="handleConf" v-else><span>手动确认</span></td>
             </tr>
           </table>
+          <!-- <pagination v-if="checkTotal > 0" @getnewpage="getNewPageEvent" :total-items="checkTotal" :page-size="pageSize"></pagination> -->
         </div>
         <div v-show="!ischeckDetailTab">
           <div class="overview clearfix">
@@ -88,6 +89,7 @@
               <td class="handleConf" v-else><span>手动确认</span></td>
             </tr>
           </table>
+          <!-- <pagination v-if="checkTotal > 0" @getnewpage="getNewPageEvent" :total-items="checkTotal" :page-size="pageSize"></pagination> -->
         </div>
       </div>
     </div>
